2006-09-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/ContactsUI.js (uixDeleteSelectedContacts):
	empty the contact view when the current contact is being deleted.

	* UI/WebServerResources/MailerUI.js (newContactFromEmail): fully
	parse the email field and provide the address full name if found
	as the "contactFN" parameter.

	* UI/WebServerResources/generic.js (openMailTo): do not give a
	name to the opened window so that serveral ones can be opened at
	the same time.

	* UI/MailPartViewers/UIxMailPartTextViewer.m
	([UIxMailPartTextViewer -flatContentAsString]): override method by
	replacing carriage returns with "<br />" in the result string from
	super's implementation.

	* UI/Contacts/UIxContactView.m ([UIxContactView
	-_urlOfType:aType]): don't manage non-mailto urls through
	javascript, let the user decide what's best for him.

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView
	-newAction]): transfer all the query parameters by using the
	"asURLParameters"'s result string from [self queryParameters].

	* UI/Contacts/UIxContactEditor.m ([UIxContactEditor
	-initSnapshot]): retrieve "contactEmail" and "contactFN" from the
	query parameters and put their values (if any) into the snapshot.

	* UI/Contacts/UIxContactView.m ([UIxContactView -note]): convert
	carriage-returns to "<br />".
	([UIxContactView -workCompany]): explicitly initialize company to
	nil if org is nil or empty.

	* UI/WebServerResources/UIxContactEditor.js: updated validation
	code after we added and renamed some fields.

	* UI/WebServerResources/ContactsUI.js: added code to cache contact
	cards and to handle card updates.

2006-09-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Contacts/UIxContactView.m ([UIxContactView -hasOtherInfos]):
	test the length of the returned string since they will never be
	nil.

	* UI/Contacts/UIxContactEditor.m ([UIxContactEditor -saveAction]):
	return self if the process went successful, returns an exception